# spse

./: .gitignore  Cargo.toml  Procfile  README.md
src/: db_operations.rs  main.rs
static/scripts/: admin.js  joinateam.js  project.js  register.js  signin.js
static/styles/: admin.css  admin.scss  main.css  main.scss  project.css  project.scss  register.css  register.scss
templates/: admin_signin.html.tera  all_admin.html.tera  categories.html.tera  guidelines.html.tera  index.html.tera  layout.html.tera  macros.html.tera  project.html.tera  register.html.tera  rules.html.tera  signin.html.tera  specific_admin.html.tera
